# workbench

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
opencode-tools/: check-task.ts  create-autopilot-schedule.ts  dispatch-code-change.ts  dispatch-local-autopilot.ts  dispatch-pipeline.ts  dispatch-task.ts  manage-autopilot-backlog.ts  package-lock.json  package.json  shared-outcome-contract.ts  test-dispatch-helpers.mjs  test-manage-autopilot-backlog.mjs
prompts/: README.md  add-tests.json  bug-fix.json  code-review.json  implement.json  local-autopilot-orchestrator.md  orchestrator.json  outcome-contract.md  refactor.json  research.json  validation.json
scripts/: bootstrap-opencode-machine.py  setup-opencode-workspace.py
tests/: conftest.py  test_backlog_sync.py  test_bootstrap_machine.py  test_config.py  test_context.py  test_context_integration.py  test_dashboard.py  test_executor.py  test_fsm.py  test_git_ops.py  test_jira_sync.py  test_main_init_workspace.py  test_mcp_server.py  test_models.py  test_pipeline.py  test_pipeline_triage.py  test_prompt_builder.py  test_resolvers.py  test_review.py  test_scheduler.py  test_setup_bootstrap_scripts.py  test_todo_crud.py  test_worker.py  test_workflow_memory.py  test_workspace_setup.py
workbench/: __init__.py  bootstrap_machine.py  config.py  context.py  dashboard.py  database.py  diagrams.py  events.py  exceptions.py  executor.py  fsm.py  git_ops.py  jira_sync.py  main.py  mcp_server.py  models.py  pipeline.py  resolvers.py  review.py  scheduler.py  (+2 more)
(+10 files in other folders)
