[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workbench"
version = "0.1.0"
description = "Autonomous agent service — accepts work via API, delegates to OpenCode"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "croniter>=2.0",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.scripts]
workbench = "workbench.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"workbench/dashboard.py" = ["E501"]  # inline HTML/CSS/JS template

[tool.pytest.ini_options]
asyncio_mode = "auto"
